--- a/source_sass/styles.scss
+++ b/source_sass/styles.scss
@@ -32,7 +32,7 @@ body {
   height: 640px;
   position: absolute;
   background-color: $secondary-color;
-  z-index: -1;
+  z-index: 1;
 }
 
 #third_tile {
@@ -44,6 +44,7 @@ body {
 
   p {
     color: $secondary-color;
+    font-weight: 600;
   }
 
   .arrow {
@@ -65,6 +66,10 @@ body {
   .hide {
     display: none;
   }
+
+  #t-1, #t-2, #t-3, #v-1, #v-2, #v-3 {
+    position: relative;
+  }
 }
 
 #fourth_tile {
@@ -77,7 +82,31 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
 
-  z-index: -1;
+  z-index: 1;
+
+  h1 {
+    text-shadow: 2px 2px 2px $tertiary-color;
+  }
+
+  p {
+    color: $secondary-color;
+    font-size: 20px;
+    text-shadow: 4px 4px 4px $tertiary-color;
+    padding: 0px;
+    font-weight: 600;
+  }
+
+  ul {
+    font-family: 'Dosis', sans-serif;
+    font-size: 20px;
+    line-height: 25px;
+    display: block;
+    float: left;
+  }
+
+  li {
+    text-align: center;
+  }
 }
 
 /* HEADER */
@@ -249,7 +278,6 @@ body {
   margin-right: 16px;
   height: 225px;
   margin-bottom: 25px;
-  background-color: $secondary-color;
 
   h1 {
     font-size: 30px;
