--- a/source_sass/_variables.scss
+++ b/source_sass/_variables.scss
@@ -1,7 +1,8 @@
-$orange         : #BD3613;
-$blue           : #2176C7;
+$color-primary: #6599FF;
+$color-secondary: #FAFAFA;
+$color-tertiary: #2B3E42;
 
-$font-primary: Merriweather, serif;
-$font-secondary: Bree Serif, serif;
+$font-primary: 'menlo', 'andale mono', 'Lucidia Console', 'Source Code Pro', monospace;
 
-$default-border-radius : 10px;
+$visualizer-width: 450px;
+$header-height: 45px;
